Fixed issue where categories are too high for the scroll view

--- a/src/styles/categories.styl
+++ b/src/styles/categories.styl
@@ -12,7 +12,7 @@
   background white
   width 100%
   height 100%
-  overflow hidden
+  overflow-x hidden
 
   .menu
     position relative
@@ -54,7 +54,7 @@
             opacity 0
 
   .teaser
-    position absolute
+    position fixed
     overflow hidden
     width 110%
     height 100%
@@ -166,3 +166,9 @@
         background-position center center
         background-repeat no-repeat
         opacity 0 !important
+
+
+@media b-sm-mh
+  .categoriesContainer
+    flexbox(flex)
+    align-items(flex-start)
